Add two tests.