@@ -84,7 +84,7 @@
 				<configuration>
 					<forkCount>1</forkCount>
 					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1536m -XX:MaxPermSize=512m</argLine>
+					<argLine>-Xmx1536m</argLine>
 					<includes>
 						<include>**/PelletTestSuite.java</include>
 					</includes>
